--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>flower shop</title>
+    <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
-    <script
-      src="https://kit.fontawesome.com/569d255573.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <header>
-      <nav>
-        <div class="logo">
-          <img src="images/logo.png" alt="Flower Shop Logo" />
+      <nav class="container">
+        <div class="main">
+          <div class="logo">
+            <img src="images/logo.png" alt="Flower Shop Logo" />
+          </div>
+          <div class="menu">
+            <ul class="display-flex nav-links">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">about us</a></li>
+              <li class="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <span>Cart ($56)</span>
+              </li>
+            </ul>
+          </div>
         </div>
-        <ul class="container">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">about us</a></li>
-          <li>
-            <i class="fa-solid fa-cart-shopping"></i>
-            <span>Cart ($56)</span>
-          </li>
-        </ul>
       </nav>
     </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
