hero section add

--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="hero-section container">
+        <div class="hero-section-main display-flex">
+          <div>
+            <h2 class="hero-title .noto-common-fonts">
+              ALWAYS
+              <span class="text-primary-color"
+                >FRESH <br />
+                FLOWERS</span
+              >
+            </h2>
+            <p class="inter-commont-fonts text-secondary-color">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh flowers that are perfect for any occasion.
+            </p>
+          </div>
+          <img src="images/hero-flower.png" alt="hero-flower" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
