plants-section add

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
       <section class="hero-section container">
         <div class="hero-section-main display-flex">
-          <div>
+          <div class="hero-text-content">
             <h2 class="hero-title .noto-common-fonts">
               ALWAYS
               <span class="text-primary-color"
@@ -40,13 +40,97 @@
                 FLOWERS</span
               >
             </h2>
-            <p class="inter-commont-fonts text-secondary-color">
+            <p class="inter-commont-fonts">
               Indulge your senses with the beauty and fragrance of our fresh
               flower shop. From classic roses to exotic blooms, we offer a wide
               variety of fresh flowers that are perfect for any occasion.
             </p>
           </div>
           <img src="images/hero-flower.png" alt="hero-flower" />
+        </div>
+      </section>
+      <section class="plants-section container">
+        <h3 class="plants-section-title noto-common-fonts">
+          <span class="text-primary-color">Our</span> Plants
+        </h3>
+        <p class="plants-section-subtitle inter-commont-fonts">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+        <div class="plants-section-main">
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="images/sample-flower-image.png"
+              alt="sample-flower-image"
+            />
+            <h4 class="flower-title">Lily Blossom</h4>
+            <p class="flower-price">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
         </div>
       </section>
     </main>
