plants-lover-section add

--- a/index.html
+++ b/index.html
@@ -133,6 +133,44 @@
           </div>
         </div>
       </section>
+      <section class="plants-lover-section container">
+        <div class="plants-lover-section-main display-flex">
+          <div class="trusted-seller">
+            <img
+              class="flower-store"
+              src="images/flower-store.png"
+              alt="flower-store"
+            />
+            <img
+              class="trusted-badge"
+              src="images/trusted-badge.png"
+              alt="trusted-badge"
+            />
+          </div>
+          <div class="plants-lover">
+            <h3 class="noto-common-fonts plants-lover-title">
+              Flower & Plants Lover
+            </h3>
+            <ul>
+              <li class="inter-commont-fonts">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <li class="inter-commont-fonts">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <li class="inter-commont-fonts">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
