latest-deals-section add

--- a/index.html
+++ b/index.html
@@ -171,6 +171,41 @@
           </div>
         </div>
       </section>
+      <section class="latest-deals-section container">
+        <h3 class="noto-common-fonts latest-deals-section-titile">
+          <span class="text-primary-color">Latest</span> Deals
+        </h3>
+        <p class="inter-commont-fonts latest-deals-section-subtitle">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+        <div class="latest-deals-section-main">
+          <div class="deals-cards">
+            <div class="deals-card-1">
+              <img src="images/deal-bloom.png" alt="deal-bloom-img" />
+              <div class="deals-card-1-content">
+                <p class="deals-card-title">60% Off | Bloom Plant</p>
+                <button class="shop">Shop Now</button>
+              </div>
+            </div>
+            <div class="deals-card-2">
+              <img src="images/deal-ana.png" alt="deal-ana-img" />
+              <div class="deals-card-2-content">
+                <p class="deals-card-title">60% Off | Bloom Plant</p>
+                <button class="shop">Shop Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="deals-card-3">
+            <img src="images/deal-zabo.png" alt="deal-zabo" />
+            <div class="deals-card-3-content">
+              <p class="deals-card-title">60% Off | Bloom Plant</p>
+              <button class="shop">Shop Now</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
