join-section add

--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
           </div>
         </div>
       </section>
+      <section class="join-section">
+        <h3 class="join-section-title">Join the colorful Bunch</h3>
+        <form class="join-section-fields">
+          <input type="text" name="" id="" placeholder="Write email" />
+          <button type="submit" class="btn-primary">Subscribe</button>
+        </form>
+      </section>
     </main>
     <footer></footer>
   </body>
