--- a/index.html
+++ b/index.html
@@ -214,6 +214,58 @@
         </form>
       </section>
     </main>
-    <footer></footer>
+    <footer class="container">
+      <div class="footer-main">
+        <div>
+          <img src="images/logo.png" alt="Flower Shop Logo" />
+          <p class="inter-commont-fonts footer-description">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop.
+          </p>
+        </div>
+        <div class="footer-links1">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-links2">
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Help Center</a></li>
+          </ul>
+        </div>
+        <div class="footer-socials">
+          <ul class="display-flex">
+            <li>
+              <a href="#"
+                ><img src="images/icon-linkedin.png" alt="icon-linkedin"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/icon-twitter.png" alt="icon-twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/icon-facebook.png" alt="icon-facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/icon-youtube.png" alt="icon-youtube"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
