menu home active class add and join-section button cursor pointer add

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
           <div class="menu">
             <ul class="display-flex nav-links">
-              <li><a href="#">Home</a></li>
+              <li><a class="active" href="#">Home</a></li>
               <li><a href="#">Shop</a></li>
               <li><a href="#">about us</a></li>
               <li class="cart">
