addCart alerat added and btn animition added and footer links hover added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <script>
+      function addCart() {
+        alert("Flower Added to Cart!");
+      }
+    </script>
   </head>
   <body>
     <header>
@@ -66,7 +71,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
           <div class="card">
             <img
@@ -75,7 +80,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
           <div class="card">
             <img
@@ -84,7 +89,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
           <div class="card">
             <img
@@ -93,7 +98,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
           <div class="card">
             <img
@@ -102,7 +107,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
           <div class="card">
             <img
@@ -111,7 +116,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
           <div class="card">
             <img
@@ -120,7 +125,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
           <div class="card">
             <img
@@ -129,7 +134,7 @@
             />
             <h4 class="flower-title">Lily Blossom</h4>
             <p class="flower-price">20 USD</p>
-            <button class="btn-primary">ADD TO CART</button>
+            <button onclick="addCart()" class="btn-primary">ADD TO CART</button>
           </div>
         </div>
       </section>
@@ -266,6 +271,9 @@
           </ul>
         </div>
       </div>
+      <p class="footer-copyright inter-commont-fonts">
+        &copy; 2025 Flower Shop. All rights reserved.
+      </p>
     </footer>
   </body>
 </html>
