input type email add join-section

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <section class="join-section">
         <h3 class="join-section-title">Join the colorful Bunch</h3>
         <form class="join-section-fields">
-          <input type="text" name="" id="" placeholder="Write email" />
+          <input type="email" name="" id="" placeholder="Write email" />
           <button type="submit" class="btn-primary">Subscribe</button>
         </form>
       </section>
